Fix card text overflow

--- a/src/app/pages/board-page/components/board/card/card.component.scss
+++ b/src/app/pages/board-page/components/board/card/card.component.scss
@@ -56,11 +56,22 @@
         background: rgba(0, 0, 0, 0.15);
         border: 1px dashed #000000;
         border-radius: 6px;
-        vertical-align: center;
-        horiz-align: center;
+        justify-content: flex-start;
+        align-items: flex-start;
         max-width: 100%;
         display: flex;
         height: 82%;
+        overflow-wrap: break-word;
+        word-break: break-all;
+        text-overflow: ellipsis;
+        overflow: auto;
+
+        -ms-overflow-style: none;
+        scrollbar-width: none;
+    }
+
+    &__body::-webkit-scrollbar {
+        display: none;
     }
 
     &__header {
@@ -70,14 +81,21 @@
         max-width: 200px;
         margin-bottom: 3px;
         height: 12%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
 
         &-actions {
-            display: inline;
             float: right;
+            display: flex;
+            flex-direction: row;
         }
 
         &-label {
             display: inline;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            overflow: hidden;
         }
     }
 }
